{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 141,
  "lineage": "50661c96-9c7d-fa44-3504-b59badd76b2f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:loadbalancer/app/jira-metrics-alb-dev/d18cfd14748f97e7",
            "arn_suffix": "app/jira-metrics-alb-dev/d18cfd14748f97e7",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "jira-metrics-alb-dev-1179949670.ap-southeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:loadbalancer/app/jira-metrics-alb-dev/d18cfd14748f97e7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "jira-metrics-alb-dev",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0bd71b0f1dee54c92"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04fed4d8e5e5fe1f1"
              },
              {
                "subnet_id": "subnet-07e5d9432048aa177"
              }
            ],
            "subnets": [
              "subnet-04fed4d8e5e5fe1f1",
              "subnet-07e5d9432048aa177"
            ],
            "tags": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-alb-dev"
            },
            "tags_all": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-alb-dev"
            },
            "vpc_id": "vpc-55415b31",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1GM3OXH4ZPM65"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:listener/app/jira-metrics-alb-dev/d18cfd14748f97e7/4230cd2327e595ee",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:targetgroup/jira-metrics-tg-dev/84e3a92d06ee0142",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:listener/app/jira-metrics-alb-dev/d18cfd14748f97e7/4230cd2327e595ee",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:loadbalancer/app/jira-metrics-alb-dev/d18cfd14748f97e7",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": false,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.reporting",
            "aws_security_group.alb",
            "aws_subnet.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "reporting",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:targetgroup/jira-metrics-tg-dev/84e3a92d06ee0142",
            "arn_suffix": "targetgroup/jira-metrics-tg-dev/84e3a92d06ee0142",
            "deregistration_delay": "60",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "8050",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:targetgroup/jira-metrics-tg-dev/84e3a92d06ee0142",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-southeast-2:107727294862:loadbalancer/app/jira-metrics-alb-dev/d18cfd14748f97e7"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "jira-metrics-tg-dev",
            "port": 8050,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-tg-dev"
            },
            "tags_all": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-tg-dev"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-55415b31"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107727294862:security-group/sg-0bd71b0f1dee54c92",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bd71b0f1dee54c92",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP inbound traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "jira-metrics-alb-sg-dev",
            "name_prefix": "",
            "owner_id": "107727294862",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-alb-sg-dev"
            },
            "tags_all": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-alb-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-55415b31"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107727294862:security-group/sg-0f185200de94c1396",
            "description": "Security group for ECS tasks",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f185200de94c1396",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow public inbound traffic to container port",
                "from_port": 8050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8050
              },
              {
                "cidr_blocks": [],
                "description": "Allow NFS traffic between ECS tasks",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 2049
              },
              {
                "cidr_blocks": [],
                "description": "Allow inbound traffic from ALB",
                "from_port": 8050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bd71b0f1dee54c92"
                ],
                "self": false,
                "to_port": 8050
              }
            ],
            "name": "jira-metrics-ecs-tasks-sg-dev",
            "name_prefix": "",
            "owner_id": "107727294862",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-ecs-tasks-sg-dev"
            },
            "tags_all": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-ecs-tasks-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-55415b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107727294862:security-group/sg-0452e9262053f32df",
            "description": "Security group for EFS mount targets",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0452e9262053f32df",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "NFS from ECS tasks",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f185200de94c1396"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "jira-metrics-efs-sg-dev",
            "name_prefix": "",
            "owner_id": "107727294862",
            "revoke_rules_on_delete": false,
            "tags": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-efs-sg-dev"
            },
            "tags_all": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-efs-sg-dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-55415b31"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs_tasks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107727294862:subnet/subnet-04fed4d8e5e5fe1f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "172.31.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fed4d8e5e5fe1f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107727294862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-subnet-dev-1"
            },
            "tags_all": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-subnet-dev-1"
            },
            "vpc_id": "vpc-55415b31"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:107727294862:subnet/subnet-07e5d9432048aa177",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "172.31.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e5d9432048aa177",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "107727294862",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-subnet-dev-2"
            },
            "tags_all": {
              "Application": "jira-metrics",
              "Environment": "dev",
              "Name": "jira-metrics-subnet-dev-2"
            },
            "vpc_id": "vpc-55415b31"
          }
        }
      ]
    }
  ]
}